Logo and paragraph fixed on smaller sizes

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,8 +9,8 @@
    --green: rgb(44, 155, 85);
     --white: rgb(253, 244, 244); 
 }
-	/* -----General----- */	
-* { 
+	/* -----MAIN BODY----- */	
+    * { 
 	box-sizing: border-box;
 }
 
@@ -19,20 +19,45 @@ body {
 	text-rendering: optimizeLegibility;
     font-family: 'Fredoka', monospace;
     background: rgb(81,209,251);
-background: radial-gradient(circle, rgba(81,209,251,1) 0%, rgba(255,255,255,1) 100%);
+    background: radial-gradient(circle, rgba(81,209,251,1) 0%, rgba(255,255,255,1) 100%);
     color: var(--Black);
 }
 
-	
 body, ul, ol, p, h1, h2 {
 padding: 0;
 margin: 0;
 }
-	/* -----LOGO/BRAND----- */	
+	/* -----Sales Pitch----- */	
+
+li {
+    list-style-type: none;
+}
+
+img {
+    margin-right: 1.5rem;
+    width: 2rem;
+    height:2rem;
+    float: left;
+
+}
+
+.sidebyside {
+    display: inline-block;
+
+}
+.width-limit {max-width: 75%;}
+
+	/* -----LOGO/NAME----- */	
+    .logo-small {
+        display: none !important;
+        }
+        
+        .logo-large {
+            display: block;
+        }
 h1 {
     font-size: 5rem;
-    text-shadow: 5px 5px var(--Black);
-   
+    text-shadow: 5px 5px var(--Black);   
 }
 
 .block-letters .block {
@@ -40,60 +65,109 @@ h1 {
     box-shadow: 4px 4px var(--Black);
     background-color: var(--white);
 }
-	/* -----VERBIAGE----- */	
 .block { padding-left: 1rem; padding-right: 1rem;}
 .block-letters .block:nth-child(10n+1){transform: rotate(10deg); color: var(--red);}
 .block-letters .block:nth-child(10n+2){transform: rotate(-10deg);  color: var(--orange);}
-.block-letters .block:nth-child(10n+3){transform: rotate(15deg); padding-left: 1rem; padding-right: 1rem; color: var(--yellow);}
-.block-letters .block:nth-child(10n+4){transform: rotate(-15deg); padding-left: 1rem; padding-right: 1rem; color: var(--green);}
+.block-letters .block:nth-child(10n+3){transform: rotate(15deg);  color: var(--yellow);}
+.block-letters .block:nth-child(10n+4){transform: rotate(-15deg); color: var(--green);}
 
 .block-letters .block:nth-child(10n+5){transform: rotate(0deg); padding-left: 1rem; padding-right: 1rem; margin-left: 1rem; margin-right: 1rem; color: var(--dk-blue);}
 
+.block-letters .block:nth-child(10n+6){transform: rotate(15deg); color: var(--red);}
+.block-letters .block:nth-child(10n+7){transform: rotate(-15deg); color: var(--orange);}
+.block-letters .block:nth-child(10n+8){transform: rotate(10deg);  color: var(--yellow);}
+.block-letters .block:nth-child(10n+9){transform: rotate(-10deg);  color: var(--green);}
 
-.block-letters .block:nth-child(10n+6){transform: rotate(15deg); padding-left: 1rem; padding-right: 1rem; color: var(--red);}
-.block-letters .block:nth-child(10n+7){transform: rotate(-15deg); padding-left: 1rem; padding-right: 1rem; color: var(--orange);}
-.block-letters .block:nth-child(10n+8){transform: rotate(10deg); padding-left: 1rem; padding-right: 1rem; color: var(--yellow);}
-.block-letters .block:nth-child(10n+9){transform: rotate(-10deg); padding-left: 1rem; padding-right: 1rem; color: var(--green);}
-	/* -----VERBIAGE----- */	
 
-li {
-    list-style-type: none;
-}
+	/* -----equation ----- */	
 
-img {
-    margin-right: 2rem;
-}
-
-	/* -----equation half----- */	
 .equation-box {
 background-color: var(--white);
-padding: 3rem 5rem;
-margin: 2rem 0rem;
+padding: 1.5rem 1.5rem;
+margin: 1rem 0rem;
 border: 1px solid var(--Black);
 box-shadow: 10px 10px var(--Black);
 display: block;
+max-width: 900px;
 }
 
 .digit {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 600;
   }
 
 .number .input {
     border: 1px solid var(--Black);
     box-shadow: 4px 4px rgba(0, 0, 0, 0.334);
-
 }
 
+.buttons { 
+    margin-top: .5rem;
+float: right;  }
 
 
 	/* -----Media Query ----- */	
 
-@media all and (max-width: 750px) {
+
+
+  @media (min-width:800x)and (max-width: 1000px) {
+    h1 {
+        font-size: 4rem;
+    }
+  }
+  @media (min-width:650px)and (max-width: 799px) {
+    h1 {
+        font-size: 3.5rem;
+        text-shadow: 4px 4px var(--Black);
+    }
+    .block { padding-left: .75rem; padding-right: .75rem;}
+    .digit {
+        font-size: 2.5rem;
+      
+      }
+  }
+
+  @media (min-width:450px)and (max-width: 649px) {
     h1 {
         font-size: 2.5rem;
         text-shadow: 3px 3px var(--Black);
     }
-
+    .block { padding-left: .5rem; padding-right: .5rem;}
     
+    .digit {
+        font-size: 2rem;
+      }
+      img {
+        margin-right: 1rem;
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+  }
+
+  @media all and (max-width: 450px) {
+    .logo-large {
+        display: none !important;
+    }
+    .logo-small {
+        display: block !important;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            text-shadow: 3px 3px var(--Black);
+        }
+        .block { padding-left: .5rem; padding-right: .5rem;}
+       
+ 
+.block-letters .block-blue {color: var(--dk-blue) !important;}
+.block-letters .block-blue {
+    border: 1px solid var(--Black);
+    box-shadow: 4px 4px var(--Black);
+    background-color: var(--white);
+}
+.block-blue{padding-left: .5rem; padding-right: .5rem;}
+
+body {
+	font-size: 1rem;
+  }
   }
